--- a/docs/objectives/o2.md
+++ b/docs/objectives/o2.md
@@ -2,89 +2,54 @@
 icon: material/text-box-outline
 ---
 
-# Insert Objective 2 Title
+# Snowball Fight
 
 **Difficulty**: :fontawesome-solid-star::fontawesome-solid-star::fontawesome-regular-star::fontawesome-regular-star::fontawesome-regular-star:<br/>
-**Direct link**: [Objective 2 website](https://.../)
+**Direct link**: [Objective 2 website](https://hhc23-snowball.holidayhackchallenge.com)
 
 ## Objective
 
 !!! question "Request"
-    Insert the objective description from your badge.
+    Visit Christmas Island and talk to Morcel Nougat about this great new game. Team up with another player and show Morcel how to win against Santa!<br>[images](../img/objectives/o2/snowball.PNG)
 
-??? quote "Insert Elf Name"
-    Copy the first part of the conversation with Elf Name here<br/>
-    You can use `<br/>` to ensure each sentence starts on a new line.
+??? quote "Morcel Nougat"
+    Hey there, I'm Morcel Nougat, elf extraordinaire!
+
+You won't believe this, but we're on a magical tropical island called Christmas Island, and it even has snow!
+
+I'm so glad ChatNPT suggested we come here this year!
+
+Santa, some elves, and I are having a snowball fight, and we'd love you to join us. Santa's really good, so trust me when I say it's way more fun when played with other people.
+
+But hey, if you can figure out a way to play solo by tinkering with client side variables or parameters to go solo mode, go for it!
+
+There's also ways to make the elves' snowballs do no damage, and all kinds of other shenanigans, but you didn't hear that from me.
+
+Just remember, it's all about having fun and sharing the joy of the holiday season with each other.
+
+So, are you in? We'd really love your company in this epic snowball battle!
 
 ## Hints
 
-??? tip "Insert Hint 1 Title"
-    Along the way you will receive different hints. Insert them here.
-
-??? tip "Insert Hint 2 Title"
-    Along the way you will receive different hints. Insert them here.
+??? tip "Snowball Super Hero"
+    Its easiest to grab a friend play with and beat Santa but tinkering with client-side variables can grant you all kinds of snowball fight super powers. You could even take on Santa and the elves solo!
+    
+??? tip "Consoling iFrames"
+    Have an iframe in your document? Be sure to select the right context before meddling with JavaScript.
 
 ## Solution
 
-This section explains the different steps taken to solve the challenge. Try to find a good balance between providing sufficient detail and not overloading the reader with too much information. Use [admonitions](https://squidfunk.github.io/mkdocs-material/reference/admonitions/), [images](https://squidfunk.github.io/mkdocs-material/reference/images/), [diagrams](https://squidfunk.github.io/mkdocs-material/reference/diagrams/), [code blocks](https://squidfunk.github.io/mkdocs-material/reference/code-blocks/), and [tables](https://squidfunk.github.io/mkdocs-material/reference/data-tables/) to highlight and structure important information or provide additional clarification.
-
-### Admonitions
-
-!!! warning "Anchor the decorations"
-    Ensure that all festive decorations, especially electrical ones, are securely anchored. We don’t want them floating off into the tropical sunset!
-
-!!! info "Palm tree lighting"
-    While on the island, make sure to hang your Christmas lights on a palm tree. It’s not only festive but also a great beacon for Santa to find you!
+The easiest way to solve this challenge was to enable Single Player mode (which brings in a very helpful elf) and to turn snowball damage off. To set single player mode you must set the value singlePlayer=true in the URL, and turn off snowball damage by setting the local variable snowballDmg = 0. Both of these actions are done in the Web Developer Tools which is built into to the Firefox web browser.  
 
 ### Images
+Set singlePlayer to True<br><br>
+![images](../img/objectives/o2/singleplayer.png)<br><br>
 
-![Terminal output](../img/objectives/o2/terminal_output_o2.png)
+Set snowball damage to zero<br><br>
+![images](../img/objectives/o2/damage.png)
 
-### Diagrams
-
-```mermaid
-sequenceDiagram
-  autonumber
-  Santa->>Elf: Hey Elf, is the Naughty-or-Nice List secured?
-  loop Security Check
-      Elf->>Elf: Ensuring list is encrypted
-  end
-  Note right of Elf: Using candy-cane encryption!
-  Elf-->>Santa: Safe and sound, Santa!
-  Santa->>Reindeer: Rudolph, did you patch the sleigh's software?
-  Note left of Reindeer: Checking for reindeerOS updates...
-  Reindeer-->>Santa: All patched and glowing bright!
-```
-
-### Code blocks
-
-```bash linenums="1" hl_lines="7" title="Countdown script (with line 7 highlighted)"
-#!/bin/bash
-echo "Christmas Holiday Countdown"
-
-days_until_xmas=$(($(date -d "Dec 25" +%j) - $(date +%j)))
-
-if [ $days_until_xmas -ge 0 ]; then
-  echo "Only $days_until_xmas days until Christmas!"
-else
-  echo "Christmas has passed! Hope you had a great time!"
-fi
-```
-
-### Tables
-
-| Activity             | Santa's Verdict       | Elf Comments                    |
-| :------------------- | :-------------------- | :------------------------------ |
-| Iceberg Surfing      | Risky Business        | "Lost three surfboards!"        |
-| Polar Bear Hugs      | Approach with Caution | "Fluffy but... brisk."          |
-| Snow Fort Building   | Highly Recommended    | "Elf-sized doorways only."      |
-| Aurora Light Chasing | Magical Experience    | "Better than Christmas lights!" |
-| Penguin Parade       | Absolute Must-See     | "They're oddly organized!"      |
-
-!!! success "Answer"
-    Insert the answer to the objective here.
 
 ## Response
 
-!!! quote "Insert Elf Name"
-    Copy the final part of the conversation with Elf Name here.
+!!! quote "Morcel Nougat"
+    You're like a snowball fighting ninja! A real-life legend. Can I have your autograph!?
