--- a/docs/objectives/o4.md
+++ b/docs/objectives/o4.md
@@ -2,89 +2,45 @@
 icon: material/text-box-outline
 ---
 
-# Insert Objective 4 Title
+# Reportinator
 
-**Difficulty**: :fontawesome-solid-star::fontawesome-solid-star::fontawesome-solid-star::fontawesome-solid-star::fontawesome-regular-star:<br/>
-**Direct link**: [Objective 4 website](https://.../)
+**Difficulty**: :fontawesome-solid-star::fontawesome-solid-star::fontawesome-regular-star::fontawesome-regular-star::fontawesome-regular-star:<br/>
+**Direct link**: N/A
 
 ## Objective
 
 !!! question "Request"
-    Insert the objective description from your badge.
+    Noel Boetie used ChatNPT to write a pentest report. Go to Christmas Island and help him clean it up.
 
-??? quote "Insert Elf Name"
-    Copy the first part of the conversation with Elf Name here<br/>
-    You can use `<br/>` to ensure each sentence starts on a new line.
+??? quote "Noel Boetie"
+    Hey there, Noel Boetie speaking! I recently tried using ChatNPT to generate my penetration testing report.
+
+It's a pretty nifty tool, but there are a few issues in the output that I've noticed.
+
+I need some guidance in finding any errors in the way it generated the content, especially those odd hallucinations in the LLM output.
+
+I know it's not perfect, but I'd really appreciate the extra eyes on this one.
+
+Some of the issues might be subtle, so don't be afraid to dig deep and ask for further clarification if you're unsure.
+
+I've heard that you folks are experts about LLM outputs and their common issues, so I trust you can help me with this.
+
+Your input will be invaluable to me, so please feel free to share any insights or findings you may have.
+
+I'm looking forward to working with you all and improving the quality of the ChatNPT-generated penetration testing report.
+
+Thanks in advance for your help! I truly appreciate it! Let's make this report the best it can be!
 
 ## Hints
 
-??? tip "Insert Hint 1 Title"
-    Along the way you will receive different hints. Insert them here.
-
-??? tip "Insert Hint 2 Title"
-    Along the way you will receive different hints. Insert them here.
+??? tip "Reportinator"
+    I know AI sometimes can get specifics wrong unless the prompts are well written. Maybe chatNPT made some mistakes here.
 
 ## Solution
 
-This section explains the different steps taken to solve the challenge. Try to find a good balance between providing sufficient detail and not overloading the reader with too much information. Use [admonitions](https://squidfunk.github.io/mkdocs-material/reference/admonitions/), [images](https://squidfunk.github.io/mkdocs-material/reference/images/), [diagrams](https://squidfunk.github.io/mkdocs-material/reference/diagrams/), [code blocks](https://squidfunk.github.io/mkdocs-material/reference/code-blocks/), and [tables](https://squidfunk.github.io/mkdocs-material/reference/data-tables/) to highlight and structure important information or provide additional clarification.
-
-### Admonitions
-
-!!! warning "Anchor the decorations"
-    Ensure that all festive decorations, especially electrical ones, are securely anchored. We don’t want them floating off into the tropical sunset!
-
-!!! info "Palm tree lighting"
-    While on the island, make sure to hang your Christmas lights on a palm tree. It’s not only festive but also a great beacon for Santa to find you!
-
-### Images
-
-![Terminal output](../img/objectives/o4/terminal_output_o4.png)
-
-### Diagrams
-
-```mermaid
-sequenceDiagram
-  autonumber
-  Santa->>Elf: Hey Elf, is the Naughty-or-Nice List secured?
-  loop Security Check
-      Elf->>Elf: Ensuring list is encrypted
-  end
-  Note right of Elf: Using candy-cane encryption!
-  Elf-->>Santa: Safe and sound, Santa!
-  Santa->>Reindeer: Rudolph, did you patch the sleigh's software?
-  Note left of Reindeer: Checking for reindeerOS updates...
-  Reindeer-->>Santa: All patched and glowing bright!
-```
-
-### Code blocks
-
-```bash linenums="1" hl_lines="7" title="Countdown script (with line 7 highlighted)"
-#!/bin/bash
-echo "Christmas Holiday Countdown"
-
-days_until_xmas=$(($(date -d "Dec 25" +%j) - $(date +%j)))
-
-if [ $days_until_xmas -ge 0 ]; then
-  echo "Only $days_until_xmas days until Christmas!"
-else
-  echo "Christmas has passed! Hope you had a great time!"
-fi
-```
-
-### Tables
-
-| Activity             | Santa's Verdict       | Elf Comments                    |
-| :------------------- | :-------------------- | :------------------------------ |
-| Iceberg Surfing      | Risky Business        | "Lost three surfboards!"        |
-| Polar Bear Hugs      | Approach with Caution | "Fluffy but... brisk."          |
-| Snow Fort Building   | Highly Recommended    | "Elf-sized doorways only."      |
-| Aurora Light Chasing | Magical Experience    | "Better than Christmas lights!" |
-| Penguin Parade       | Absolute Must-See     | "They're oddly organized!"      |
-
-!!! success "Answer"
-    Insert the answer to the objective here.
+ (did not solve. TODO)
 
 ## Response
 
-!!! quote "Insert Elf Name"
-    Copy the final part of the conversation with Elf Name here.
+!!! quote "Noel Boetie"
+    I look forward you to finally completing this easy challenge. :) 
