--- a/docs/objectives/o5.md
+++ b/docs/objectives/o5.md
@@ -2,89 +2,171 @@
 icon: material/text-box-outline
 ---
 
-# Insert Objective 5 Title
+# Azure 101
 
-**Difficulty**: :fontawesome-solid-star::fontawesome-solid-star::fontawesome-solid-star::fontawesome-solid-star::fontawesome-solid-star:<br/>
+**Difficulty**: :fontawesome-solid-star::fontawesome-solid-star::fontawesome-regular-star::fontawesome-regular-star::fontawesome-regular-star:<br/>
 **Direct link**: [Objective5.zip](https://.../)
 
 ## Objective
 
 !!! question "Request"
-    Insert the objective description from your badge.
+    Help Sparkle Redberry with some Azure command line skills. Find the elf and the terminal on Christmas Island.
 
-??? quote "Insert Elf Name"
-    Copy the first part of the conversation with Elf Name here<br/>
-    You can use `<br/>` to ensure each sentence starts on a new line.
+??? quote "Sparkle Redberry"
+    Hey, Sparkle Redberry here! So, I've been trying to learn about Azure and the Azure CLI and it's driving me nuts.
+
+Alabaster Snowball decided to use Azure to host some of his fancy new IT stuff on Geese Islands, and now us elves have to learn it too.
+
+Anyway, I know it's important and everyone says it's not as difficult as it seems, but honestly it still feels like quite a challenge for me.
+
+Alabaster sent us this Azure CLI reference as well. It's super handy, he said. Honestly, it just confuses me even more.
+
+If you can spare a moment, would you mind giving me a hand with this terminal? I'd be really grateful! Pretty please, with holly leaves on top!
 
 ## Hints
 
-??? tip "Insert Hint 1 Title"
-    Along the way you will receive different hints. Insert them here.
-
-??? tip "Insert Hint 2 Title"
-    Along the way you will receive different hints. Insert them here.
+??? tip "Azure CLI Reference"
+    The Azure CLI tools come with a builtin help system, but Microsoft also provides this handy cheatsheet.
 
 ## Solution
 
-This section explains the different steps taken to solve the challenge. Try to find a good balance between providing sufficient detail and not overloading the reader with too much information. Use [admonitions](https://squidfunk.github.io/mkdocs-material/reference/admonitions/), [images](https://squidfunk.github.io/mkdocs-material/reference/images/), [diagrams](https://squidfunk.github.io/mkdocs-material/reference/diagrams/), [code blocks](https://squidfunk.github.io/mkdocs-material/reference/code-blocks/), and [tables](https://squidfunk.github.io/mkdocs-material/reference/data-tables/) to highlight and structure important information or provide additional clarification.
+Similar to the Linux 101 challenge, this task is to simply use the commands found in the documentation. <br><br>
+az help
+az account show
+az group list
+az functionapp list -g northpole-rg1
+az vm list -g northpole-rg2
+az vm run-command list -g northpole-rg2 --location AzureCloud 
+az vm run-command invoke -g northpole-rg2 -n NP-VM1 --command-id RunShellScript --scripts "ls"
 
-### Admonitions
+Resource groups:<br><br>
+```  {
+    "id": "/subscriptions/2b0942f3-9bca-484b-a508-abdae2db5e64/resourceGroups/northpole-rg1",
+    "location": "eastus",
+    "managedBy": null,
+    "name": "northpole-rg1",
+    "properties": {
+      "provisioningState": "Succeeded"
+    },
+    "tags": {}
+  },
+  {
+    "id": "/subscriptions/2b0942f3-9bca-484b-a508-abdae2db5e64/resourceGroups/northpole-rg2",
+    "location": "westus",
+    "managedBy": null,
+    "name": "northpole-rg2",
+    "properties": {
+      "provisioningState": "Succeeded"
+    },
+    "tags": {}
+```
 
-!!! warning "Anchor the decorations"
-    Ensure that all festive decorations, especially electrical ones, are securely anchored. We don’t want them floating off into the tropical sunset!
+```
+northpole-rg2 VM
 
-!!! info "Palm tree lighting"
-    While on the island, make sure to hang your Christmas lights on a palm tree. It’s not only festive but also a great beacon for Santa to find you!
+[
+  {
+    "id": "/subscriptions/2b0942f3-9bca-484b-a508-abdae2db5e64/resourceGroups/northpole-rg2/providers/Microsoft.Compute/virtualMachines/NP-VM1",
+    "location": "eastus",
+    "name": "NP-VM1",
+    "properties": {
+      "hardwareProfile": {
+        "vmSize": "Standard_D2s_v3"
+      },
+      "provisioningState": "Succeeded",
+      "storageProfile": {
+        "imageReference": {
+          "offer": "UbuntuServer",
+          "publisher": "Canonical",
+          "sku": "16.04-LTS",
+          "version": "latest"
+        },
+        "osDisk": {
+          "caching": "ReadWrite",
+                   "offer": "UbuntuServer",
+          "publisher": "Canonical",
+          "sku": "16.04-LTS",
+          "version": "latest"
+        },
+        "osDisk": {
+          "caching": "ReadWrite",
+          "createOption": "FromImage",
+          "managedDisk": {
+            "storageAccountType": "Standard_LRS"
+          },
+          "name": "VM1_OsDisk_1"
+        }
+      },
+      "vmId": "e5f16214-18be-4a31-9ebb-2be3a55cfcf7"
+    },
+    "resourceGroup": "northpole-rg2",
+    "tags": {}
+  }
+]
+```
+
+```
+vm NP-VM1?
+  
+  
+  {
+    "id": "/subscriptions/2b0942f3-9bca-484b-a508-abdae2db5e64/resourceGroups/northpole-rg2/providers/Microsoft.Compute/virtualMachines/NP-VM1",
+    "location": "eastus",
+    "name": "NP-VM1",
+    "properties": {
+      "hardwareProfile": {
+        "vmSize": "Standard_D2s_v3"
+      },
+      "provisioningState": "Succeeded",
+      "storageProfile": {
+        "imageReference": {
+          "offer": "UbuntuServer",
+          "publisher": "Canonical",
+          "sku": "16.04-LTS",
+          "version": "latest"
+        },
+        "osDisk": {
+          "caching": "ReadWrite",
+                   "offer": "UbuntuServer",
+          "publisher": "Canonical",
+          "sku": "16.04-LTS",
+          "version": "latest"
+        },
+        "osDisk": {
+          "caching": "ReadWrite",
+          "createOption": "FromImage",
+          "managedDisk": {
+            "storageAccountType": "Standard_LRS"
+          },
+          "name": "VM1_OsDisk_1"
+        }
+      },
+      "vmId": "e5f16214-18be-4a31-9ebb-2be3a55cfcf7"
+    },
+    "resourceGroup": "northpole-rg2",
+    "tags": {}
+  }
+```
 
 ### Images
 
 ![Terminal output](../img/objectives/o5/terminal_output_o5.png)
 
-### Diagrams
-
-```mermaid
-sequenceDiagram
-  autonumber
-  Santa->>Elf: Hey Elf, is the Naughty-or-Nice List secured?
-  loop Security Check
-      Elf->>Elf: Ensuring list is encrypted
-  end
-  Note right of Elf: Using candy-cane encryption!
-  Elf-->>Santa: Safe and sound, Santa!
-  Santa->>Reindeer: Rudolph, did you patch the sleigh's software?
-  Note left of Reindeer: Checking for reindeerOS updates...
-  Reindeer-->>Santa: All patched and glowing bright!
-```
-
-### Code blocks
-
-```bash linenums="1" hl_lines="7" title="Countdown script (with line 7 highlighted)"
-#!/bin/bash
-echo "Christmas Holiday Countdown"
-
-days_until_xmas=$(($(date -d "Dec 25" +%j) - $(date +%j)))
-
-if [ $days_until_xmas -ge 0 ]; then
-  echo "Only $days_until_xmas days until Christmas!"
-else
-  echo "Christmas has passed! Hope you had a great time!"
-fi
-```
-
-### Tables
-
-| Activity             | Santa's Verdict       | Elf Comments                    |
-| :------------------- | :-------------------- | :------------------------------ |
-| Iceberg Surfing      | Risky Business        | "Lost three surfboards!"        |
-| Polar Bear Hugs      | Approach with Caution | "Fluffy but... brisk."          |
-| Snow Fort Building   | Highly Recommended    | "Elf-sized doorways only."      |
-| Aurora Light Chasing | Magical Experience    | "Better than Christmas lights!" |
-| Penguin Parade       | Absolute Must-See     | "They're oddly organized!"      |
-
-!!! success "Answer"
-    Insert the answer to the objective here.
-
 ## Response
 
-!!! quote "Insert Elf Name"
-    Copy the final part of the conversation with Elf Name here.
+!!! quote "Sparkle Redberry"
+    Wow, you did it!
+
+It makes quite a bit more sense to me now. Thank you so much!
+
+That Azure Function App URL you came across in the terminal looked interesting.
+
+It might be part of that new project Alabaster has been working on with the help of ChatNPT.
+
+Let me tell you, since he started using ChatNPT he's been introducing a lot of amazing innovation across the islands.
+
+Knowing Alabaster, he'll be delighted to tell you all about it! I think I last saw him on Pixel island.
+
+By the way, as part of the Azure documentation he sent the elves, Alabaster also noted that if Azure CLI tools aren't available in an Azure VM we should use the Azure REST API instead.
+
+I'm not really sure what that means, but I guess I know what I'll be studying up on next.
