--- a/docs/objectives/o12.md
+++ b/docs/objectives/o12.md
@@ -2,89 +2,52 @@
 icon: material/text-box-outline
 ---
 
-# Insert Objective 5 Title
+# Na'an  (submitted after deadline)
 
-**Difficulty**: :fontawesome-solid-star::fontawesome-solid-star::fontawesome-solid-star::fontawesome-solid-star::fontawesome-solid-star:<br/>
-**Direct link**: [Objective5.zip](https://.../)
+**Difficulty**: :fontawesome-solid-star::fontawesome-solid-star::fontawesome-regular-star::fontawesome-regular-star::fontawesome-regular-star:<br/>
+**Direct link**: [Website](https://nannannannannannan.com/)
 
 ## Objective
 
 !!! question "Request"
-    Insert the objective description from your badge.
+    Shifty McShuffles is hustling cards on Film Noir Island. Outwit that meddling elf and win!
 
-??? quote "Insert Elf Name"
-    Copy the first part of the conversation with Elf Name here<br/>
-    You can use `<br/>` to ensure each sentence starts on a new line.
+??? quote "Shifty McShuffles"
+    Hey there, stranger! Fancy a game of cards? Luck's on your side today, I can feel it.
+
+Step right up, test your wit! These cards could be your ticket to fortune.
+
+Trust me, I've got a good eye for winners, and you've got the look of luck about you.
+
+Plus, I'd wager you've never played this game before, as this isn't any ordinary deck of cards. It's made with Python.
+
+The name of the game is to bamboozle the dealer.
+
+So whad'ya think? Are you clever enough?
 
 ## Hints
 
-??? tip "Insert Hint 1 Title"
-    Along the way you will receive different hints. Insert them here.
+??? tip "Stump the Chump"
+    Try to outsmart Shifty by sending him an error he may not understand.
 
-??? tip "Insert Hint 2 Title"
-    Along the way you will receive different hints. Insert them here.
+??? tip "The Upper Hand"
+    Shifty said his deck of cards is made with Python. Surely there's a weakness to give you the upper hand in his game.
 
 ## Solution
 
-This section explains the different steps taken to solve the challenge. Try to find a good balance between providing sufficient detail and not overloading the reader with too much information. Use [admonitions](https://squidfunk.github.io/mkdocs-material/reference/admonitions/), [images](https://squidfunk.github.io/mkdocs-material/reference/images/), [diagrams](https://squidfunk.github.io/mkdocs-material/reference/diagrams/), [code blocks](https://squidfunk.github.io/mkdocs-material/reference/code-blocks/), and [tables](https://squidfunk.github.io/mkdocs-material/reference/data-tables/) to highlight and structure important information or provide additional clarification.
-
-### Admonitions
-
-!!! warning "Anchor the decorations"
-    Ensure that all festive decorations, especially electrical ones, are securely anchored. We don’t want them floating off into the tropical sunset!
-
-!!! info "Palm tree lighting"
-    While on the island, make sure to hang your Christmas lights on a palm tree. It’s not only festive but also a great beacon for Santa to find you!
+The solution to this is to take advantage in a Python bug that causes unexpected behavior when tyring to use the float() function on NaN (not a number). I first confirmed this worked by using Burpsuite to capture the POST message I was going to send with my card numbers. Manually changed each number to "NaN" and saw that I was able to win the hand.<br><Br>
+You can not get the achievment doing this outside of the game though. You must use Firefox Web Developer Tools, console, to change the card values for each hand. The values are stored in an array: cardArray2[i].cardtext.text
 
 ### Images
 
-![Terminal output](../img/objectives/o5/terminal_output_o5.png)
+![]()
 
-### Diagrams
-
-```mermaid
-sequenceDiagram
-  autonumber
-  Santa->>Elf: Hey Elf, is the Naughty-or-Nice List secured?
-  loop Security Check
-      Elf->>Elf: Ensuring list is encrypted
-  end
-  Note right of Elf: Using candy-cane encryption!
-  Elf-->>Santa: Safe and sound, Santa!
-  Santa->>Reindeer: Rudolph, did you patch the sleigh's software?
-  Note left of Reindeer: Checking for reindeerOS updates...
-  Reindeer-->>Santa: All patched and glowing bright!
-```
-
-### Code blocks
-
-```bash linenums="1" hl_lines="7" title="Countdown script (with line 7 highlighted)"
-#!/bin/bash
-echo "Christmas Holiday Countdown"
-
-days_until_xmas=$(($(date -d "Dec 25" +%j) - $(date +%j)))
-
-if [ $days_until_xmas -ge 0 ]; then
-  echo "Only $days_until_xmas days until Christmas!"
-else
-  echo "Christmas has passed! Hope you had a great time!"
-fi
-```
-
-### Tables
-
-| Activity             | Santa's Verdict       | Elf Comments                    |
-| :------------------- | :-------------------- | :------------------------------ |
-| Iceberg Surfing      | Risky Business        | "Lost three surfboards!"        |
-| Polar Bear Hugs      | Approach with Caution | "Fluffy but... brisk."          |
-| Snow Fort Building   | Highly Recommended    | "Elf-sized doorways only."      |
-| Aurora Light Chasing | Magical Experience    | "Better than Christmas lights!" |
-| Penguin Parade       | Absolute Must-See     | "They're oddly organized!"      |
-
-!!! success "Answer"
-    Insert the answer to the objective here.
 
 ## Response
 
-!!! quote "Insert Elf Name"
-    Copy the final part of the conversation with Elf Name here.
+!!! quote "Shifty McShuffles"
+    Well, you sure are more clever than most of the tourists that show up here.
+
+I couldn't swindle ya, but don't go telling everyone how you beat me!
+
+An elf's gotta put food on the table somehow, and I'm doing the best I can with what I got.
