--- a/docs/objectives/o9.md
+++ b/docs/objectives/o9.md
@@ -5,6 +5,7 @@ icon: material/text-box-outline
 # Game Cartridges: Vol 1
 
 **Difficulty**: :fontawesome-solid-star::fontawesome-regular-star::fontawesome-regular-star::fontawesome-regular-star::fontawesome-regular-star:<br/>
+**Direct link**: [ROM](https://gamegosling.com/vol1-uWn1t6xv4VKPZ6FN/rom/game.gb)
 
 ## Objective
 
