--- a/docs/objectives/o11.md
+++ b/docs/objectives/o11.md
@@ -2,87 +2,41 @@
 icon: material/text-box-outline
 ---
 
-# Insert Objective 5 Title
+# Game Cartridges: Vol 3 (submitted after deadline)
 
-**Difficulty**: :fontawesome-solid-star::fontawesome-solid-star::fontawesome-solid-star::fontawesome-solid-star::fontawesome-solid-star:<br/>
-**Direct link**: [Objective5.zip](https://.../)
+**Difficulty**: :fontawesome-solid-star::fontawesome-solid-star::fontawesome-solid-star::fontawesome-regular-star::fontawesome-regular-star:<br/>
+**Direct link**: [ROM](https://gamegosling.com/vol3-7bNwQKGBFNGQT1/rom/game.gb)
 
 ## Objective
 
 !!! question "Request"
-    Insert the objective description from your badge.
-
-??? quote "Insert Elf Name"
-    Copy the first part of the conversation with Elf Name here<br/>
-    You can use `<br/>` to ensure each sentence starts on a new line.
+    Find the third Gamegosling cartridge and beat the game
 
 ## Hints
 
-??? tip "Insert Hint 1 Title"
-    Along the way you will receive different hints. Insert them here.
+??? tip "Bird's Eye View"
+    The location of the treasure in Rusty Quay is marked by a shiny spot on the ground. To help with navigating the maze, try zooming out and changing the camera angle.
 
-??? tip "Insert Hint 2 Title"
-    Along the way you will receive different hints. Insert them here.
+??? tip "Gameboy 3 - Angel Canydalt"
+    1) This one is a bit long, it never hurts to save your progress! 2) 8bit systems have much smaller registers than you’re used to. 3) Isn’t this great?!? The coins are OVERFLOWing in their abundance.
 
 ## Solution
 
-This section explains the different steps taken to solve the challenge. Try to find a good balance between providing sufficient detail and not overloading the reader with too much information. Use [admonitions](https://squidfunk.github.io/mkdocs-material/reference/admonitions/), [images](https://squidfunk.github.io/mkdocs-material/reference/images/), [diagrams](https://squidfunk.github.io/mkdocs-material/reference/diagrams/), [code blocks](https://squidfunk.github.io/mkdocs-material/reference/code-blocks/), and [tables](https://squidfunk.github.io/mkdocs-material/reference/data-tables/) to highlight and structure important information or provide additional clarification.
-
-### Admonitions
-
-!!! warning "Anchor the decorations"
-    Ensure that all festive decorations, especially electrical ones, are securely anchored. We don’t want them floating off into the tropical sunset!
-
-!!! info "Palm tree lighting"
-    While on the island, make sure to hang your Christmas lights on a palm tree. It’s not only festive but also a great beacon for Santa to find you!
+I believe the solution is to use Ghidra to find the location in code where the score is being written, then modify the game.gb binary so that the score is always '999'. You can not play the game and get to 999; it will overload and roll over starting from 0. Did not complete. 
 
 ### Images
 
-![Terminal output](../img/objectives/o5/terminal_output_o5.png)
+![Image](todo)
 
 ### Diagrams
 
-```mermaid
-sequenceDiagram
-  autonumber
-  Santa->>Elf: Hey Elf, is the Naughty-or-Nice List secured?
-  loop Security Check
-      Elf->>Elf: Ensuring list is encrypted
-  end
-  Note right of Elf: Using candy-cane encryption!
-  Elf-->>Santa: Safe and sound, Santa!
-  Santa->>Reindeer: Rudolph, did you patch the sleigh's software?
-  Note left of Reindeer: Checking for reindeerOS updates...
-  Reindeer-->>Santa: All patched and glowing bright!
+```todo
 ```
 
 ### Code blocks
 
-```bash linenums="1" hl_lines="7" title="Countdown script (with line 7 highlighted)"
-#!/bin/bash
-echo "Christmas Holiday Countdown"
-
-days_until_xmas=$(($(date -d "Dec 25" +%j) - $(date +%j)))
-
-if [ $days_until_xmas -ge 0 ]; then
-  echo "Only $days_until_xmas days until Christmas!"
-else
-  echo "Christmas has passed! Hope you had a great time!"
-fi
+```todo 
 ```
-
-### Tables
-
-| Activity             | Santa's Verdict       | Elf Comments                    |
-| :------------------- | :-------------------- | :------------------------------ |
-| Iceberg Surfing      | Risky Business        | "Lost three surfboards!"        |
-| Polar Bear Hugs      | Approach with Caution | "Fluffy but... brisk."          |
-| Snow Fort Building   | Highly Recommended    | "Elf-sized doorways only."      |
-| Aurora Light Chasing | Magical Experience    | "Better than Christmas lights!" |
-| Penguin Parade       | Absolute Must-See     | "They're oddly organized!"      |
-
-!!! success "Answer"
-    Insert the answer to the objective here.
 
 ## Response
 
