added some screen shots, fixed some text

--- a/docs/objectives/o10.md
+++ b/docs/objectives/o10.md
@@ -27,9 +27,13 @@ icon: material/text-box-outline
 I solved this by editing the binary so that the wizard text 'you shall pass' instead of 'you shall not pass'. You must change the hex value to 00 for each of the values "not" and the spaces. Once you go past the wizard you will encounter a radio that is producing a morse code signal. I had trouble hearing the code so I did an audio recording of it using Audacity. The wave forms clearly showed the dashes and dots that make up the code. Using online resouces you can translate the morse. The code is "gl0ry".
 
 ### Images
-![morse](../img/objectives/o10/radio_ending.png)
+![Original hex of ROM](../img/objectives/o10/hexedit1.png)
 
-![morse](../img/objectives/o10/wave.png)
+![Modified hex of ROM](../img/objectives/o10/hexedit2.png)
+
+![End scene](../img/objectives/o10/radio_ending.png)
+
+![Morse code](../img/objectives/o10/wave.png)
 
 !!! success "Answer"
     gl0ry 
