--- a/docs/objectives/o19.md
+++ b/docs/objectives/o19.md
@@ -49,6 +49,10 @@ I hope you find it. I'll be here when you get back!
 
 ![...](...)
 
+### Audio
+
+![Wombly Cube Audio Book](../audio/objectives/o19/wombleycube_the_enchanted_voyage.mp3)
+
 ### Diagrams
 
 ```...
