--- a/docs/objectives/o9.md
+++ b/docs/objectives/o9.md
@@ -24,4 +24,32 @@ icon: material/text-box-outline
 
 Moving the blocks into their correct locations will reveal the QR code that opens a website that displays the text "santaconfusedgivingplanetsqrcode".
 
+### Images
+
+Order of block movements
+
+![Far left block](../img/objectives/o9/block1.png)
+![Far left block moved to far right side](../img/objectives/o9/block1destination.png)
+
+![Next block to move](../img/objectives/o9/block6.png)
+![Moved](../img/objectives/o9/block6moved.png)
+
+![Next block to move](../img/objectives/o9/block2.png)
+![Moved](../img/objectives/o9/block2moved.png)
+
+![Next block to move](../img/objectives/o9/block5.png)
+![Moved](../img/objectives/o9/block5moved.png)
+
+![Next block to move](../img/objectives/o9/block3.png)
+![Moved](../img/objectives/o9/block3moved.png)
+
+![Next block to move](../img/objectives/o9/block4.png)
+![Moved](../img/objectives/o9/block4moved.png)
+
+![Last block to move](../img/objectives/o9/block7.png)
+
+![QR code](../img/objectives/o9/solution.png)
+
+!!! success "Answer"
+    santaconfusedgivingplanetsqrcode
 
