fixed bad links to images for o9...again

--- a/docs/objectives/o9.md
+++ b/docs/objectives/o9.md
@@ -31,13 +31,13 @@ Order of block movements
 ![Far left block](../img/objectives/o9/block1.png)
 ![Far left block moved to far right side](../img/objectives/o9/block1destination.png)
 
-![Next block to move](...//img/objectives/o9/block6.png)
+![Next block to move](../img/objectives/o9/block6.png)
 ![Moved](../img/objectives/o9/movedblock6.png)
 
 ![Next block to move](../img/objectives/o9/block2.png)
 ![Moved](../img/objectives/o9/movedblock2.png)
 
-![Next block to move](.../img/objectives/o9/block5.png)
+![Next block to move](../img/objectives/o9/block5.png)
 ![Moved](../img/objectives/o9/movedblock5.png)
 
 ![Next block to move](../img/objectives/o9/block3.png)
