--- a/docs/objectives/o9.md
+++ b/docs/objectives/o9.md
@@ -32,7 +32,7 @@ Moving the blocks into their correct locations will reveal the QR code that open
 
     Move this block from the far left side
     
-![Far left block](../img/objectives/2-1.png)
+![Far left block](../img/objectives/o9/2-1.png)
 
     To the far right side 
     
