--- a/docs/objectives/o4.md
+++ b/docs/objectives/o4.md
@@ -48,7 +48,8 @@ Success from Python script<br><br>
 
 ### Code blocks
 
-```import requests
+```
+import requests
 import logging
 import time
 import re
