fixed more o4 typos

--- a/docs/objectives/o4.md
+++ b/docs/objectives/o4.md
@@ -38,7 +38,7 @@ Thanks in advance for your help! I truly appreciate it! Let's make this report t
 
 ## Solution
 
- I initially tried to resolve this using AI (specifically MS Copilot); however, all nine of the challenges came back from Copilot as correct. I may have use Copilot incorrectly but it didn't matter. I just wanted to move through this challenge to get to the more interesting ones. So my solution was to load the website in Burpsuite and through Firefox Web Developer Tools to determine the HTTP requests/responses that were required to interact with the game. With this knowledge I created a Python script to iterate through all the permutations of answers to find the correct set of answers. It is shown in the code segment below. 
+ I initially tried to resolve this using AI (specifically MS Copilot); however, all nine of the challenges came back from Copilot as correct. I may have used Copilot incorrectly but it didn't matter. I just wanted to move through this challenge to get to the more interesting ones. So my solution was to load the website in Burpsuite and through Firefox Web Developer Tools to determine the HTTP requests/responses that were required to interact with the game. With this knowledge I created a Python script to iterate through all the permutations of answers to find the correct set of answers. It is shown in the code segment below. 
  
  There are 9 questions which means there are 512 answers to the the challenge. I just brute forced all permutations until a solution was found.
  
@@ -113,6 +113,6 @@ for vals in range(512):
 !!! quote "Noel Boetie"
     Great work! You've successfully navigated through the intricate maze of data, distinguishing the authentic findings from the AI hallucinations. Your diligence in validating the penetration test report is commendable.
 
-Your contributions to ensuring the accuracy and integrity of our cybersecurity efforts are invaluable. The shadows of uncertainty have been dispelled, leaving clarity and truth in their wake. The findings you have authenticated will play a crucial role in fortifying our digital defenses.
+    Your contributions to ensuring the accuracy and integrity of our cybersecurity efforts are invaluable. The shadows of uncertainty have been dispelled, leaving clarity and truth in their wake. The findings you have authenticated will play a crucial role in fortifying our digital defenses.
 
-We appreciate your expertise and keen analytical skills in this crucial task. You are a true asset to the team. Keep up the excellent work! 
+    We appreciate your expertise and keen analytical skills in this crucial task. You are a true asset to the team. Keep up the excellent work! 
