--- a/docs/objectives/o13.md
+++ b/docs/objectives/o13.md
@@ -5,7 +5,7 @@ icon: material/text-box-outline
 # KQL Kraken Hunt (submitted after deadline)
 
 **Difficulty**: :fontawesome-solid-star::fontawesome-solid-star::fontawesome-regular-star::fontawesome-regular-star::fontawesome-regular-star:<br/>
-**Direct link**: [Objective 1 terminal](https://.../)
+**Direct link**: [Kusto Detective](https://detective.kusto.io/sans2023)
 
 ## Objective
 
