--- a/docs/objectives/o5.md
+++ b/docs/objectives/o5.md
@@ -5,7 +5,7 @@ icon: material/text-box-outline
 # Azure 101
 
 **Difficulty**: :fontawesome-solid-star::fontawesome-solid-star::fontawesome-regular-star::fontawesome-regular-star::fontawesome-regular-star:<br/>
-**Direct link**: [Objective5.zip](https://.../)
+**Direct link**: [Objective5.zip](https://hhc23-wetty.holidayhackchallenge.com)
 
 ## Objective
 
