completed kql kraken hunt

--- a/docs/objectives/o14.md
+++ b/docs/objectives/o14.md
@@ -48,13 +48,13 @@ I need to get more powdered sugar for my donuts, so do ping me when you have som
  
  Email:
  	1 Safe
- 	2 Phish (DMARC fail)
+ 	2 Phish 
  	3 Safe
  	4 Safe
  	5 Safe
  	6 Safe
  	7 Safe
- 	8 Phish (DKIM, DMARC fail)
+ 	8 Phish 
  	9 Safe
  	10 Safe
  	11 Safe
