fixed objective titles

--- a/docs/objectives/o18.md
+++ b/docs/objectives/o18.md
@@ -2,7 +2,7 @@
 icon: material/text-box-outline
 ---
 
-# Insert The Captain's Comms (submitted after deadline)
+# The Captain's Comms (submitted after deadline)
 
 **Difficulty**: :fontawesome-solid-star::fontawesome-solid-star::fontawesome-solid-star::fontawesome-solid-star::fontawesome-solid-star:<br/>
 **Direct link**: [Objective 18 terminal](https://.../)
